<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RingtoneGenerator</string>

    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_export">Export</string>
    <string name="action_delete_saves">Delete All</string>
    <string name="delete_all_saves_warning">Delete all save files permanently?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string-array name="sounds_array">
        <item>Sine</item>
        <item>Sine Tail</item>
        <item>Saw</item>
        <item>Square</item>
        <item>Saw Plucked</item>
        <item>Square Plucked</item>
        <item>Poly Saw</item>
        <item>Poly Sqaure</item>
    </string-array>

    <string-array name="patterns_array">
        <item>Sine</item>
        <item>Sine Tail</item>
        <item>Saw</item>
        <item>Square</item>
        <item>Saw Plucked</item>
        <item>Square Plucked</item>
        <item>Poly Saw</item>
        <item>Poly Sqaure</item>
    </string-array>

    <string name="sound">Sound</string>
    <string name="pattern">Pattern</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="loop">Loop</string>
    <string name="mercury">Mercury</string>

    <string name="title_activity_export">Export</string>
    <string name="export_message">Enter a name, and export your tone to the Android system.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_act_save_file">Save File</string>
    <string name="title_activity_act_load_file">Load</string>


</resources>
