<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:background="@color/background" >

        <LinearLayout
            android:id="@+id/soundLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/soundTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textColor="@color/highcontrast"
                android:textSize="@dimen/display_text" />

            <Button
                android:id="@+id/soundButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/widget_margin"
                android:layout_marginRight="@dimen/widget_margin"
                android:background="@drawable/main_button"
                android:text="@string/mercury"
                android:onClick="buttonOnClick" />

        </LinearLayout>

         <LinearLayout
             android:id="@+id/patternLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".5"
             android:gravity="center"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/patternTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pattern"
                 android:textSize="@dimen/display_text"
                 android:textColor="@color/highcontrast"
                  />

             <Button
                android:id="@+id/patternButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/widget_margin"
                android:layout_marginRight="@dimen/widget_margin"
                android:background="@drawable/main_button"
                android:text="@string/mercury"
                android:onClick="buttonOnClick" />

        </LinearLayout>

         <LinearLayout
             android:id="@+id/pitchLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical" >

             <TextView
             android:id="@+id/pitchLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pitch"
             android:textSize="@dimen/display_text"
             android:textColor="@color/highcontrast" />

             <TextView
             android:id="@+id/pitchDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
             android:textSize="@dimen/display_text"
             android:textColor="@color/highcontrast" />

             <SeekBar
                 android:id="@+id/pitchSeekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/widget_margin"
                 android:layout_marginRight="@dimen/widget_margin" />

        </LinearLayout>

         <LinearLayout
             android:id="@+id/speedLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/speedLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speed"
                 android:textSize="@dimen/display_text"
                 android:textColor="@color/highcontrast" />

             <TextView
                 android:id="@+id/speedDisplay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textSize="@dimen/display_text"
                 android:textColor="@color/highcontrast" />

             <SeekBar
                 android:id="@+id/speedSeekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/widget_margin"
                 android:layout_marginRight="@dimen/widget_margin" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loopLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loopLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loop"
                android:textSize="@dimen/display_text"
                android:textColor="@color/highcontrast" />

            <TextView
                android:id="@+id/loopDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="@dimen/display_text"
                android:textColor="@color/highcontrast" />

            <SeekBar
                android:id="@+id/loopSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/widget_margin"
                android:layout_marginRight="@dimen/widget_margin" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/background" >

        <Button
            android:id="@+id/previewButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:text="@string/preview"
            android:textColor="@color/highcontrast"
            android:onClick="buttonOnClick" />

    </LinearLayout>

</LinearLayout>
